--- a/lang/en.json
+++ b/lang/en.json
@@ -1,31 +1,31 @@
 {
-  "nominations.disabledEmptyMapgroup": ">> Nomination disabled because there are no maps in the active map group!",
-  "nominations.beMoreSpecific": ">> You need to specify a map name or a part of a map name that uniquely identifies the map!",
-  "nominations.chatMenuTitle": ">> Nominate a map for vote at match end:",
-  "nominations.noMapFound": ">> No map was found that starts with or contains your query. Please try again!",
-  "nominations.couldNotIdentify": ">> Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "nominations.noNominationsYet": "[Nominations] No nominations so far. Type in !nom <map-name> to nominate a map for voting after match end!",
-  "nominations.nominationListPrefix": "[Nominations] Nominated maps so far: ",
-  "nominations.nominationByPlayerSuccessful": "[Nominations] Player {player} nominated map {map} for the map vote at match end!",
-  "nominations.removedPreviousNomination": ">> Removed your previous nomination of map {map}!",
-  "nominations.nominationByUnknownEntitySuccessful": "[Nominations] Map {map} was nominated for the map vote at match end!",
-  "nominations.alreadyNominated": ">> The map {map} is already nominated!",
-  "callVotes.disabledManually": ">> Callvotes disabled at the moment! Consider to nominate a map and start an !rtv vote instead.",
-  "callVotes.disabledEmptyMapgroup": ">> Callvotes disabled because there are no maps in the active map group!",
-  "callVotes.activeCooldown": ">> The next callvote can be started in {seconds} seconds!",
-  "callVotes.beMoreSpecific": ">> You need to specify a map name or a part of a map name that uniquely identifies the map!",
-  "callVotes.chatMenuTitle": ">> Choose map for callvote:",
-  "callVotes.noMapFound": ">> No map was found that starts with or contains your query. Please try again!",
-  "callVotes.couldNotIdentify": ">> Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "callVotes.voteStartedByPlayer": "[Callvote] Player {player} started a callvote for map {map}!",
-  "callVotes.voteStartedByUnknownEntity": "[Callvote] A callvote for map {map} was started!",
-  "rtv.activeCooldown": ">> The next RTV can be started in {seconds} seconds!",
-  "rtv.voteStartedByPlayer": "[RTV] Player {player} started an RTV vote. Type in !rtv if you want to change the map!",
-  "rtv.voteStartedByUnknownEntity": "[RTV] An RTV vote was started. Type in !rtv if you want to change the map!",
-  "rtv.votedSuccessfully": ">> Successfully voted for map change!",
-  "rtv.alreadyVoted": ">> Already voted for map change!",
-  "rtv.voteSucceeded": "[RTV] Vote succeeded. Changing map after this round!",
-  "rtv.voteFailed": "[RTV] Vote failed. Only {playersVoted} of {playersNeeded} players voted, so not changing map!",
-  "rtv.status": "[RTV] Vote in progress - {playersVoted} of {playersNeeded} needed players voted for changing the map!",
-  "rtv.statusHint": "[RTV] Type in !rtv to vote. Remember to !nominate maps for the map vote!"
+  "nominations.disabledEmptyMapgroup": " {green}>> {default}Nomination disabled because there are no maps in the active map group!",
+  "nominations.beMoreSpecific": " {green}>> {default}You need to specify a map name or a part of a map name that uniquely identifies the map!",
+  "nominations.chatMenuTitle": " {green}>> {default}Nominate a map for vote at match end:",
+  "nominations.noMapFound": " {green}>> {default}No map was found that starts with or contains your query. Please try again!",
+  "nominations.couldNotIdentify": " {green}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
+  "nominations.noNominationsYet": " {green}[Nominations] {default}No nominations so far. Type in {lime}!nom <map-name>{default} to nominate a map for voting after match end!",
+  "nominations.nominationListPrefix": " {green}[Nominations] {default}Nominated maps so far: ",
+  "nominations.nominationByPlayerSuccessful": " {green}[Nominations] {default}Player {lime}{player}{default} nominated map {lime}{map}{default} for the map vote at match end!",
+  "nominations.removedPreviousNomination": " {green}>> {default}Removed your previous nomination of map {lime}{map}{default}!",
+  "nominations.nominationByUnknownEntitySuccessful": " {green}[Nominations] {default}Map {lime}{map}{default} was nominated for the map vote at match end!",
+  "nominations.alreadyNominated": " {green}>> {default}The map {lime}{map}{default} is already nominated!",
+  "callVotes.disabledManually": " {yellow}>> {default}Callvotes disabled at the moment! Consider to nominate a map and start an {lime}!rtv{default} vote instead.",
+  "callVotes.disabledEmptyMapgroup": " {yellow}>> {default}Callvotes disabled because there are no maps in the active map group!",
+  "callVotes.activeCooldown": " {yellow}>> {default}The next callvote can be started in {lime}{seconds}{default} seconds!",
+  "callVotes.beMoreSpecific": " {yellow}>> {default}You need to specify a map name or a part of a map name that uniquely identifies the map!",
+  "callVotes.chatMenuTitle": " {yellow}>> {default}Choose map for callvote:",
+  "callVotes.noMapFound": " {yellow}>> {default}No map was found that starts with or contains your query. Please try again!",
+  "callVotes.couldNotIdentify": " {yellow}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
+  "callVotes.voteStartedByPlayer": " {yellow}[Callvote] {default}APlayer {player} started a callvote for map {map}!",
+  "callVotes.voteStartedByUnknownEntity": " {yellow}[Callvote] {default}A callvote for map {lime}{map}{default} was started!",
+  "rtv.activeCooldown": " {lightblue}>> {default}The next RTV can be started in {lime}{seconds}{default} seconds!",
+  "rtv.voteStartedByPlayer": " {lightblue}[RTV] {default}Player {player} started an RTV vote. Type in {lime}!rtv{default} if you want to change the map!",
+  "rtv.voteStartedByUnknownEntity": " {lightblue}[RTV] {default}An RTV vote was started. Type in {lime}!rtv{default} if you want to change the map!",
+  "rtv.votedSuccessfully": " {lightblue}>> {default}Successfully voted for map change!",
+  "rtv.alreadyVoted": " {lightblue}>> {default}Already voted for map change!",
+  "rtv.voteSucceeded": " {lightblue}[RTV] {default}Vote succeeded. Changing map after this round!",
+  "rtv.voteFailed": " {lightblue}[RTV] {default}Vote failed. Only {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} players voted, so not changing map!",
+  "rtv.status": " {lightblue}[RTV] {default}Vote in progress - {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} needed players voted for changing the map!",
+  "rtv.statusHint": " {lightblue}[RTV] {default}Type in {lime}!rtv{default} to vote. Remember to {lime}!nominate{default} maps for the map vote!"
 }
