fixed some texts and their colorings

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,10 +17,10 @@
   "callVotes.chatMenuTitle": " {yellow}>> {default}Choose map for callvote:",
   "callVotes.noMapFound": " {yellow}>> {default}No map was found that starts with or contains your query. Please try again!",
   "callVotes.couldNotIdentify": " {yellow}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "callVotes.voteStartedByPlayer": " {yellow}[Callvote] {default}APlayer {player} started a callvote for map {map}!",
+  "callVotes.voteStartedByPlayer": " {yellow}[Callvote] {default}Player {lime}{player}{default} started a callvote for map {lime}{map}{default}!",
   "callVotes.voteStartedByUnknownEntity": " {yellow}[Callvote] {default}A callvote for map {lime}{map}{default} was started!",
   "rtv.activeCooldown": " {lightblue}>> {default}The next RTV can be started in {lime}{seconds}{default} seconds!",
-  "rtv.voteStartedByPlayer": " {lightblue}[RTV] {default}Player {player} started an RTV vote. Type in {lime}!rtv{default} if you want to change the map!",
+  "rtv.voteStartedByPlayer": " {lightblue}[RTV] {default}Player {lime}{player}{default} started an RTV vote. Type in {lime}!rtv{default} if you want to change the map!",
   "rtv.voteStartedByUnknownEntity": " {lightblue}[RTV] {default}An RTV vote was started. Type in {lime}!rtv{default} if you want to change the map!",
   "rtv.votedSuccessfully": " {lightblue}>> {default}Successfully voted for map change!",
   "rtv.alreadyVoted": " {lightblue}>> {default}Already voted for map change!",
