implemented chat-based callvotes
that not crash the server because of missing tv_stoprecord

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,15 +10,25 @@
   "nominations.removedPreviousNomination": " {green}>> {default}Removed your previous nomination of map {lime}{map}{default}!",
   "nominations.nominationByUnknownEntitySuccessful": " {green}[Nominations] {default}Map {lime}{map}{default} was nominated for the map vote at match end!",
   "nominations.alreadyNominated": " {green}>> {default}The map {lime}{map}{default} is already nominated!",
+
   "callVotes.disabledManually": " {yellow}>> {default}Callvotes disabled at the moment! Consider to nominate a map and start an {lime}!rtv{default} vote instead.",
   "callVotes.disabledEmptyMapgroup": " {yellow}>> {default}Callvotes disabled because there are no maps in the active map group!",
-  "callVotes.activeCooldown": " {yellow}>> {default}The next callvote can be started in {lime}{seconds}{default} seconds!",
   "callVotes.beMoreSpecific": " {yellow}>> {default}You need to specify a map name or a part of a map name that uniquely identifies the map!",
   "callVotes.chatMenuTitle": " {yellow}>> {default}Choose map for callvote:",
   "callVotes.noMapFound": " {yellow}>> {default}No map was found that starts with or contains your query. Please try again!",
   "callVotes.couldNotIdentify": " {yellow}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "callVotes.voteStartedByPlayer": " {yellow}[Callvote] {default}Player {lime}{player}{default} started a callvote for map {lime}{map}{default}!",
-  "callVotes.voteStartedByUnknownEntity": " {yellow}[Callvote] {default}A callvote for map {lime}{map}{default} was started!",
+  "callVotes.activeCooldown": " {yellow}>> {default}The next callvote can be started in {lime}{seconds}{default} seconds!",
+  "callVotes.voteStartedByPlayer": " {yellow}[CallVote] {default}Player {lime}{player}{default} started an callvote to change the map to {lime}{map}{default}. Type in {lime}!cv{default} if you want this map too!",
+  "callVotes.voteStartedByUnknownEntity": " {yellow}[CallVote] {default}A callvote to change the map to {lime}{map}{default} was started. Type in {lime}!cv{default} if you want this map too!",
+  "callVotes.votedSuccessfully": " {yellow}>> {default}Successfully voted for changing map to {lime}{map}{default}!",
+  "callVotes.alreadyVoted": " {yellow}>> {default}Already voted for changing map to {lime}{map}{default}!",
+  "callVotes.alreadySucceeded": " {yellow}[CallVote] {default}A previous callvote already succeeded. Changing map to {lime}{map}{default} after this round!",
+  "callVotes.voteSucceeded": " {yellow}[CallVote] {default}Vote succeeded. Changing map to {lime}{map}{default} after this round!",
+  "callVotes.voteFailed": " {yellow}[CallVote] {default}Vote failed. Only {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} players voted, so not changing map!",
+  "callVotes.status": " {yellow}[CallVote] {default}Vote in progress - {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} needed players voted for changing the map to {lime}{map}{default}!",
+  "callVotes.statusHint": " {yellow}[CallVote] {default}Type in {lime}!cv{default} to vote for this map too!",
+  "callVotes.anotherVoteRunning": " {yellow}[CallVote] {default}Another vote is running already!",
+
   "rtv.activeCooldown": " {lightblue}>> {default}The next RTV can be started in {lime}{seconds}{default} seconds!",
   "rtv.voteStartedByPlayer": " {lightblue}[RTV] {default}Player {lime}{player}{default} started an RTV vote. Type in {lime}!rtv{default} if you want to change the map!",
   "rtv.voteStartedByUnknownEntity": " {lightblue}[RTV] {default}An RTV vote was started. Type in {lime}!rtv{default} if you want to change the map!",
