first commit of new version

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,45 +1,11 @@
 {
-  "nominations.disabledEmptyMapgroup": " {green}>> {default}Nomination disabled because there are no maps in the active map group!",
-  "nominations.beMoreSpecific": " {green}>> {default}You need to specify a map name or a part of a map name that uniquely identifies the map!",
-  "nominations.chatMenuTitle": " {green}>> {default}Nominate a map for vote at match end:",
-  "nominations.noMapFound": " {green}>> {default}No map was found that starts with or contains your query. Please try again!",
-  "nominations.couldNotIdentify": " {green}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "nominations.noNominationsYet": " {green}[Nominations] {default}No nominations so far. Type in {lime}!nom <map-name>{default} to nominate a map for voting after match end!",
-  "nominations.nominationListPrefix": " {green}[Nominations] {default}Nominated maps so far: ",
-  "nominations.nominationByPlayerSuccessful": " {green}[Nominations] {default}Player {lime}{player}{default} nominated map {lime}{map}{default} for the map vote at match end!",
-  "nominations.removedPreviousNomination": " {green}>> {default}Removed your previous nomination of map {lime}{map}{default}!",
-  "nominations.nominationByUnknownEntitySuccessful": " {green}[Nominations] {default}Map {lime}{map}{default} was nominated for the map vote at match end!",
-  "nominations.alreadyNominated": " {green}>> {default}The map {lime}{map}{default} is already nominated!",
-
-  "callVotes.disabledManually": " {yellow}>> {default}Callvotes disabled at the moment! Consider to nominate a map and start an {lime}!rtv{default} vote instead.",
-  "callVotes.disabledEmptyMapgroup": " {yellow}>> {default}Callvotes disabled because there are no maps in the active map group!",
-  "callVotes.beMoreSpecific": " {yellow}>> {default}You need to specify a map name or a part of a map name that uniquely identifies the map!",
-  "callVotes.chatMenuTitle": " {yellow}>> {default}Choose map for callvote:",
-  "callVotes.noMapFound": " {yellow}>> {default}No map was found that starts with or contains your query. Please try again!",
-  "callVotes.couldNotIdentify": " {yellow}>> {default}Could not uniquely identify the map you want. Did you mean one of the following maps?",
-  "callVotes.activeCooldown": " {yellow}>> {default}The next callvote can be started in {lime}{seconds}{default} seconds!",
-  "callVotes.voteStartedByPlayer": " {yellow}[CallVote] {default}Player {lime}{player}{default} started an callvote to change the map to {lime}{map}{default}. Type in {lime}!cv{default} if you want this map too!",
-  "callVotes.voteStartedByUnknownEntity": " {yellow}[CallVote] {default}A callvote to change the map to {lime}{map}{default} was started. Type in {lime}!cv{default} if you want this map too!",
-  "callVotes.votedSuccessfully": " {yellow}>> {default}Successfully voted for changing map to {lime}{map}{default}!",
-  "callVotes.alreadyVoted": " {yellow}>> {default}Already voted for changing map to {lime}{map}{default}!",
-  "callVotes.alreadySucceeded": " {yellow}[CallVote] {default}A previous callvote already succeeded. Changing map to {lime}{map}{default} after this round!",
-  "callVotes.voteSucceeded": " {yellow}[CallVote] {default}Vote succeeded. Changing map to {lime}{map}{default} after this round!",
-  "callVotes.voteFailed": " {yellow}[CallVote] {default}Vote failed. Only {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} players voted, so not changing map!",
-  "callVotes.status": " {yellow}[CallVote] {default}Vote in progress - {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} needed players voted for changing the map to {lime}{map}{default}!",
-  "callVotes.statusHint": " {yellow}[CallVote] {default}Type in {lime}!cv{default} to vote for this map too!",
-  "callVotes.anotherVoteRunning": " {yellow}[CallVote] {default}Another vote is running already!",
-  "callVotes.spectatorsNotAllowed": " {yellow}>> {default}Spectators cannot participate in call votes!",
-
-  "rtv.activeCooldown": " {lightblue}>> {default}The next RTV can be started in {lime}{seconds}{default} seconds!",
-  "rtv.voteStartedByPlayer": " {lightblue}[RTV] {default}Player {lime}{player}{default} started an RTV vote. Type in {lime}!rtv{default} if you want to change the map!",
-  "rtv.voteStartedByUnknownEntity": " {lightblue}[RTV] {default}An RTV vote was started. Type in {lime}!rtv{default} if you want to change the map!",
-  "rtv.votedSuccessfully": " {lightblue}>> {default}Successfully voted for map change!",
-  "rtv.alreadyVoted": " {lightblue}>> {default}Already voted for map change!",
-  "rtv.alreadySucceeded": " {lightblue}>> {default}A previous RTV vote was already successful, and the map will be changed after this round!",
-  "rtv.voteSucceeded": " {lightblue}[RTV] {default}Vote succeeded. Changing map after this round!",
-  "rtv.voteFailed": " {lightblue}[RTV] {default}Vote failed. Only {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} players voted, so not changing map!",
-  "rtv.status": " {lightblue}[RTV] {default}Vote in progress - {lime}{playersVoted}{default} of {lime}{playersNeeded}{default} needed players voted for changing the map!",
-  "rtv.statusHint": " {lightblue}[RTV] {default}Type in {lime}!rtv{default} to vote. Remember to {lime}!nominate{default} maps for the map vote!",
-  "rtv.anotherVoteRunning": " {lightblue}[RTV] {default}Another vote is running already!",
-  "rtv.spectatorsNotAllowed": " {lightblue}>> {default}Spectators cannot participate in RTV votes!"
+    "core.debugprint": "[NativeMapVote][DEBUG]: {message}",
+    "core.config": "[NativeMapVote] Configuration loaded",
+    "rtv.text": "RTV started: want to change the map after this round?",
+    "rtv.already_success": "[NativeMapVote] already successfully voted :)",
+    "rtv.success": "[NativeMapVote] !rtv successfully called. Voting will start after this round",
+    "rtv.failed": "[NativeMapVote] !rtv failed",
+    "rtv.cooldown": "[NativeMapVote] !rtv is on cooldown. You can call it again in {seconds} seconds",
+    "rtv.in_progress": "[NativeMapVote] !rtv is currently in progress!",
+    "rtv.vote_delay": "[NativeMapVote] You have to wait ~{seconds} seconds before the vote will start automatically"
 }
