--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -5,7 +5,30 @@
     "rtv.already_success": "{lightblue}[RTV] bereits erfolgreich abgestimmt :)",
     "rtv.success": "{lightblue}[RTV] {green}!rtv {default}erfolgreich aufgerufen. Die Abstimmung beginnt nach dieser Runde",
     "rtv.failed": "{lightblue}[RTV] {green}!rtv {default}fehlgeschlagen",
-    "rtv.cooldown": "{lightblue}[RTV] {green}!rtv {default}ist in der Abkühlphase. Du kannst es in {seconds} Sekunden erneut aufrufen",
+    "rtv.cooldown": "{lightblue}[RTV] {green}!rtv {default}ist in der Abkühlphase. Du kannst es in {seconds} Sekunden erneut versuchen",
     "rtv.in_progress": "{lightblue}[RTV] {green}!rtv {default}läuft bereits!",
-    "rtv.vote_delay": "{lightblue}[RTV] {default}Du musst ~{green}{seconds}{default} Sekunden warten, bevor die Abstimmung automatisch beginnt"
+    "rtv.vote_delay": "{lightblue}[RTV] {default}Du musst ~{green}{seconds}{default} Sekunden warten, bevor die Abstimmung automatisch beginnt",
+    "nomination.no_maps": "{lightblue}[Nomination] {red}Keine Karten zum Nominieren verfügbar",
+    "nomination.max_reached": "{lightblue}[Nomination] {default}Nur {green}{amount} {default}Karten können nominiert werden.",
+    "nomination.map_not_found": "{lightblue}[Nomination] {red}Karte nicht gefunden.",
+    "nomination.menu.title": "{lightblue}[Nomination] {default}Welche Karte möchtest du nominieren?",
+    "nomination.already_exists": "{lightblue}[Nomination] {red}Karte bereits nominiert.",
+    "nomination.success": "{lightblue}[Nomination] {default}Erfolgreich nominiert: {green}{map}",
+    "nomination.updated": "{lightblue}[Nomination] {default}Nominierung erfolgreich aktualisiert zu {green}{map}",
+    "nominations.list": "{lightblue}[Nomination] {default}Aktuelle Nominierungen: {nominations}",
+    "nominations.empty": "{lightblue}[Nomination] {default}Keine Nominierungen verfügbar",
+    "workshop.error": "{lightblue}[NativeMapVote] {red}Konnte Workshop-Karten nicht vom Server abrufen (print_mapgroup_sv wird verwendet) -> {error}",
+    "workshop.success": "{lightblue}[NativeMapVote] {default}Erfolgreich {green}{amount} {default}Workshop-Karten abgerufen",
+    "localmaps.error": "{lightblue}[NativeMapVote] {red}Konnte lokale Karten nicht vom Server abrufen (maps * wird verwendet) -> {error}",
+    "localmaps.success": "{lightblue}[NativeMapVote] {default}Erfolgreich {green}{amount} {default}lokale Karten abgerufen",
+    "changelevel.no_maps": "{lightblue}[NeueKarte] {red}Keine Karten zum Nominieren verfügbar",
+    "changelevel.map_not_found": "{lightblue}[NeueKarte] {red}Karte nicht gefunden.",
+    "changelevel.menu.title": "{lightblue}[NeueKarte] {default}Zu welcher Karte möchtest du wechseln?",
+    "changelevel.cooldown": "{lightblue}[NeueKarte] {green}!changelevel {default}ist in der Abkühlphase. Du kannst es in {seconds} Sekunden erneut versuchen",
+    "changelevel.in_progress": "{lightblue}[NeueKarte] {green}!changelevel {default}ist bereits aktiv!",
+    "changelevel.vote_delay": "{lightblue}[NeueKarte] {default}Du musst ~{green}{seconds} {default}Sekunden warten, bevor die Abstimmung automatisch beginnt",
+    "changelevel.already_success": "{lightblue}[NeueKarte] {default}bereits erfolgreich abgestimmt für {green}{map}",
+    "changelevel.success_now": "{lightblue}[NeueKarte] {default}Wechsle jetzt zur Karte {green}{map}",
+    "changelevel.success_endround": "{lightblue}[NeueKarte] {default}Wechsle nach dieser Runde zur Karte {green}{map}",
+    "changelevel.failed": "{lightblue}[NeueKarte] {default}Nicht genügend Stimmen, um die Karte nach {green}{map} {default}zu wechseln"
 }
