--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,5 +7,28 @@
     "rtv.failed": "{lightblue}[RTV] {green}!rtv {default}failed",
     "rtv.cooldown": "{lightblue}[RTV] {green}!rtv {default}is on cooldown. You can call it again in {seconds} seconds",
     "rtv.in_progress": "{lightblue}[RTV] {green}!rtv {default}is currently in progress!",
-    "rtv.vote_delay": "{lightblue}[RTV] {default}You have to wait ~{green}{seconds} {default}seconds before the vote will start automatically"
+    "rtv.vote_delay": "{lightblue}[RTV] {default}You have to wait ~{green}{seconds} {default}seconds before the vote will start automatically",
+    "nomination.no_maps": "{lightblue}[Nomination] {red}No maps available to nominate",
+    "nomination.max_reached": "{lightblue}[Nomination] {default}Only {green}{amount} {default}maps can be nominated.",
+    "nomination.map_not_found": "{lightblue}[Nomination] {red}Map not found.",
+    "nomination.menu.title": "{lightblue}[Nomination] {default}Which map would you like to nominate?",
+    "nomination.already_exists": "{lightblue}[Nomination] {red}Map already nominated.",
+    "nomination.success": "{lightblue}[Nomination] {default}Successfully nominated {green}{map}",
+    "nomination.updated": "{lightblue}[Nomination] {default}Successfully updated nomination to {green}{map}",
+    "workshop.error": "{lightblue}[NativeMapVote] {red}Could not get workshop maps from server (using print_mapgroup_sv) -> {error}",
+    "nominations.list": "{lightblue}[Nomination] {default}Current nominations: {nominations}",
+    "nominations.empty": "{lightblue}[Nomination] {default}No nominations available",
+    "workshop.success": "{lightblue}[NativeMapVote] {default}Successfully fetched {green}{amount} {default}workshop maps",
+    "localmaps.error": "{lightblue}[NativeMapVote] {red}Could not get local maps from server (using maps *) -> {error}",
+    "localmaps.success": "{lightblue}[NativeMapVote] {default}Successfully fetched {green}{amount} {default}local maps",
+    "changelevel.no_maps": "{lightblue}[Changelevel] {red}No maps available to change to",
+    "changelevel.map_not_found": "{lightblue}[Changelevel] {red}Map not found.",
+    "changelevel.menu.title": "{lightblue}[Changelevel] {default}Which map would you like to change to?",
+    "changelevel.cooldown": "{lightblue}[Changelevel] {green}!changelevel {default}is on cooldown. You can call it again in {seconds} seconds",
+    "changelevel.in_progress": "{lightblue}[Changelevel] {green}!changelevel {default}is currently in progress!",
+    "changelevel.vote_delay": "{lightblue}[Changelevel] {default}You have to wait ~{green}{seconds} {default}seconds before the vote will start automatically",
+    "changelevel.already_success": "{lightblue}[Changelevel] {default}already successfully voted for {green}{map}",
+    "changelevel.success_now": "{lightblue}[Changelevel] {default}Changing to map {green}{map} {default}now!",
+    "changelevel.success_endround": "{lightblue}[Changelevel] {default}Changing to map {green}{map} {default}after this round!",
+    "changelevel.failed": "{lightblue}[Changelevel] {default}Not enough votes to change the map to {green}{map}"
 }
