--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,6 +1,10 @@
 {
     "core.debugprint": "[NativeMapVote][DEBUG]: {message}",
     "core.config": "[NativeMapVote] Configuration loaded",
+    "admin.unknown_command": "[NativeMapVote] Unknown command: {command}",
+    "admin.reload": "[NativeMapVote] Configuration reloaded",
+    "admin.best_maps": "[NativeMapVote] Best maps:",
+    "admin.worst_maps": "[NativeMapVote] Worst maps:",
     "rtv.text": "-> currently hardcoded in the plugin <-",
     "rtv.already_success": "{lightblue}[RTV] already successfully voted :)",
     "rtv.success": "{lightblue}[RTV] {green}!rtv {default}successfully called. Voting will start after this round",
