--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -1,9 +1,11 @@
 {
     "core.debugprint": "[NativeMapVote][DEBUG]: {message}",
     "core.config": "[NativeMapVote] Konfiguration geladen",
+    "admin.unknown_command": "[NativeMapVote] Unbekannter Befehl: {command}",
     "admin.reload": "[NativeMapVote] Konfiguration neu geladen",
     "admin.best_maps": "[NativeMapVote] Beste Karten:",
     "admin.worst_maps": "[NativeMapVote] Schlechteste Karten:",
+    "admin.cleanup": "[NativeMapVote] Bereinigung abgeschlossen. {amount} Karten aus der Konfiguration entfernt.",
     "rtv.text": "-> derzeit im Plugin fest codiert <-",
     "rtv.already_success": "{lightblue}[RTV] bereits erfolgreich abgestimmt :)",
     "rtv.success": "{lightblue}[RTV] {green}!rtv {default}erfolgreich aufgerufen. Die Abstimmung beginnt nach dieser Runde",
